RESOLVED FIXED277120
REGRESSION(274519@main): "Open with Preview" context menu item does not work on locked PDF documents
https://bugs.webkit.org/show_bug.cgi?id=277120
Summary REGRESSION(274519@main): "Open with Preview" context menu item does not work ...
Abrar Rahman Protyasha
Reported 2024-07-25 21:21:26 PDT
Attachments
Abrar Rahman Protyasha
Comment 1 2024-07-26 00:01:03 PDT
EWS
Comment 2 2024-07-26 13:30:13 PDT
Committed 281413@main (9f863a565d7f): <https://commits.webkit.org/281413@main> Reviewed commits have been landed. Closing PR #31266 and removing active labels.
EWS
Comment 3 2024-07-26 18:11:58 PDT
Committed 280938.136@safari-7619-branch (e1f3adb5b51f): <https://commits.webkit.org/280938.136@safari-7619-branch> Reviewed commits have been landed. Closing PR #1503 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.